# polymarket-crypto-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
btc-5min-bot/: Cargo.toml
btc-5min-bot/src/: atr.rs  config.rs  main.rs  state.rs  strategy.rs  velocity.rs
core-shared/: Cargo.toml
core-shared/src/: lib.rs
eth-5min-bot/: Cargo.toml
eth-5min-bot/src/: atr.rs  config.rs  main.rs  strategy.rs  test_connection.rs
