[package]
name = "btc-5min-bot"
version = "0.1.0"
edition = "2021"
default-run = "btc-5min-bot"

[dependencies]
core-shared = { path = "../core-shared" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
url = "2.4"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1.3", features = ["v4"] }
hex = "0.4"
ethers = { version = "2.0", features = ["rustls", "abigen"] }
log = "0.4"
env_logger = "0.10"
futures-util = "0.3"
libm = "0.2.16"
rand = "0.8"
polymarket-client-sdk = { version = "0.3", features = ["ws"] }
k256 = "0.13.4"
alloy-signer-local = "1.7.3"
num-traits = "0.2"
